--- a/Assignment.AzureWeather.Api/appsettings.Development.json
+++ b/Assignment.AzureWeather.Api/appsettings.Development.json
@@ -5,6 +5,10 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "ConnectionStrings": {
+    "WeatherDb": "<connection-string>"
+  },
+  "FrontUrl": "http://localhost:3000",
   "WeatherService": {
     "Units": "metric",
     "ApiKey": "<api_key>",
