added more tests

--- a/Assignment.AzureWeather.Tests/Assignment.AzureWeather.Tests.csproj
+++ b/Assignment.AzureWeather.Tests/Assignment.AzureWeather.Tests.csproj
@@ -17,6 +17,7 @@
         <PackageReference Include="NUnit" Version="3.14.0"/>
         <PackageReference Include="NUnit.Analyzers" Version="3.9.0"/>
         <PackageReference Include="NUnit3TestAdapter" Version="4.5.0"/>
+        <PackageReference Include="WorkerHttpFake" Version="1.0.0" />
     </ItemGroup>
 
     <ItemGroup>
@@ -24,6 +25,7 @@
     </ItemGroup>
 
     <ItemGroup>
+      <ProjectReference Include="..\Assignment.AzureWeather.Function\Assignment.AzureWeather.Function.csproj" />
       <ProjectReference Include="..\Assignment.AzureWeather.Infrastructure\Assignment.AzureWeather.Infrastructure.csproj" />
     </ItemGroup>
 
