updated README and appsettings

--- a/Assignment.AzureWeather.Api/appsettings.json
+++ b/Assignment.AzureWeather.Api/appsettings.json
@@ -5,5 +5,18 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "WeatherDb": "<connection-string>"
+  },
+  "FrontUrl": "http://localhost:3000",
+  "WeatherService": {
+    "Units": "metric",
+    "ApiKey": "<api_key>",
+    "ServiceUrl": "https://api.openweathermap.org"
+  },
+  "WeatherWorker": {
+    "Locations": ["Stockholm, SE", "Gothenburg, SE", "Oslo, NO", "Bergen, NO", "Copenhagen, DK", "Frederikssund, DK"],
+    "IntervalSeconds": 60
+  }
 }
