--- a/Assignment.AzureWeather.Infrastructure/Assignment.AzureWeather.Infrastructure.csproj
+++ b/Assignment.AzureWeather.Infrastructure/Assignment.AzureWeather.Infrastructure.csproj
@@ -14,6 +14,8 @@
     <ItemGroup>
       <PackageReference Include="Azure.Data.Tables" Version="12.10.0" />
       <PackageReference Include="Azure.Storage.Blobs" Version="12.24.0" />
+      <PackageReference Include="FluentValidation" Version="11.11.0" />
+      <PackageReference Include="FluentValidation.AspNetCore" Version="11.3.0" />
       <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.3" />
       <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="9.0.3">
         <PrivateAssets>all</PrivateAssets>
